--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
