--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "antd": "^5.16.5",
+    "highlight.js": "^11.9.0",
+    "marked": "^12.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
