--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.16.5",
     "highlight.js": "^11.9.0",
     "marked": "^12.0.2",
+    "marked-highlight": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
