--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --open",
     "prod": "vite --mode test",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode prod",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
