--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -17,7 +17,8 @@
     "marked": "^12.0.2",
     "marked-highlight": "^2.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
