--- a/chat-server/requirements.txt
+++ b/chat-server/requirements.txt
@@ -7,8 +7,10 @@ colorama==0.4.6
 fastapi==0.115.2
 h11==0.14.0
 idna==3.10
+mysql-connector-python==9.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyJWT==2.10.1
 python-dotenv==1.0.1
 pywin32==308
 requests==2.32.3
