feat: 修改build:min脚本

--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open",
     "prod": "vite --mode test",
     "build": "tsc && vite build --mode prod",
-    "build:min": "tsc && vite build --mode prod --max-old-space-size=1024",
+    "build:min": "NODE_OPTIONS='--max-old-space-size=1024' tsc && vite build --mode prod",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
